# recordh264

./: .gitignore  CMakeLists.txt  Makefile  Makefile.build  README.md  main.cpp  readme  thread.cpp
calculate/: calculate.h  calculate_cpu.cpp  calculate_cpu.h  calculate_rockchip.cpp  calculate_rockchip.h
camera/: CMakeLists.txt  h264_camera.cpp  h264_camera.h  h264encoder.cpp  h264encoder.h  video_capture.cpp  video_capture.h
cmake/: build_for_darwin.cmake  build_for_f1c100s.cmake  build_for_h3.cmake  build_for_host.cmake  build_for_mipsel.cmake  build_for_v831.cmake  macos_build_for_arm64.cmake
epoll/: CMakeLists.txt  epoll.cpp  epoll.h
h264camera/: CMakeLists.txt  H264_UVC_Cap.cpp  H264_UVC_Cap.h  debug.h  h264_xu_ctrls.h  v4l2uvc.cpp  v4l2uvc.h
include/: signal_queue.h  thread_pool.h  video_source.h
mjpg/: CMakeLists.txt  avilib.cpp  avilib.h  mjpgrecord.cpp  mjpgrecord.h  v4l2uvc.cpp  v4l2uvc.h
mp3/: README.md  mp3_player.cpp
nv12/: CMakeLists.txt  nv12_capture.cpp  nv12_capture.h
ringbuf/: CMakeLists.txt  ringbuffer.cpp  ringbuffer.h
rk_mpp/: camera_source.c  camera_source.h  mpi_dec_utils.c  mpi_dec_utils.h  mpi_enc_utils.c  mpi_enc_utils.h  mpp_buffer.cpp  mpp_buffer.h  mpp_common.h  mpp_dev_defs.h  mpp_dmabuf.cpp  mpp_dmabuf.h  mpp_enc_roi_utils.c  mpp_enc_roi_utils.h  mpp_hash.h  mpp_list.h  mpp_lock.h  mpp_opt.c  mpp_opt.h  mpp_time.h  mpp_trie.h  rk_mpp_encoder.cpp  rk_mpp_encoder.h  rk_utils.c  rk_utils.h
sound/: Makefile  README.md  recorder.cpp  recorder.h
video/: H264_UVC_TestAP.cpp  H264_UVC_TestAP.h  Makefile
x264/: x264_config.h
x264/h3/: libx264.so.157
